--- a/pom.xml
+++ b/pom.xml
@@ -15,63 +15,20 @@
 		</resources>
 		<plugins>
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>app.Main</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
+				<groupId>com.jolira</groupId>
+				<artifactId>onejar-maven-plugin</artifactId>
+				<version>1.4.4</version>
 				<executions>
 					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
+						<configuration>
+							<mainClass>app.Main</mainClass>
+						</configuration>
 						<goals>
-							<goal>single</goal>
+							<goal>one-jar</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
-	<!--  		<plugin>-->
-				<!-- create an all-in-one executable jar with maven-shade-plugin bound 
-					to phase:package special handling for spring.handlers/spring.schemas files 
-					to prevent overwriting (maven-shade-plugin joins them to one file) usage: 
-					cd to <project>/target java -jar hello-world-java-1.0-SNAPSHOT-executable.jar 
-					spring/batch/job/hello-world-job.xml helloWorldJob -->
-	<!-- 	 		<artifactId>maven-shade-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>app.Main</mainClass>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>META-INF/spring.handlers</resource>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>META-INF/spring.schemas</resource>
-								</transformer>
-							</transformers>-->
-				<!-- 			<shadedArtifactAttached>true</shadedArtifactAttached>-->
-							<!-- configures the suffix name for the executable jar here it will 
-								be '<project.artifact>-<project.version>-executable.jar' <shadedClassifierName>executable</shadedClassifierName> -->
-			<!-- 	 		</configuration>
-					</execution>
-				</executions>
-			</plugin>-->
 		</plugins>
 	</build>
 
